// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls out live ballot sheets in test mode 1`] = `
<div>
  <div
    class="sc-bBHHQT hByWxc"
  >
    <div
      class="sc-eCssSg jAJyXG"
    >
      <nav
        class="sc-jSgupP dvPmoJ"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        />
      </nav>
    </div>
    <main
      class="sc-iJKOzS kSmZZc"
    >
      <div
        class="sc-iqHYGH jKykRi"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <h1>
            <span
              style="font-size: 2em;"
            >
              Live Ballot
            </span>
          </h1>
          <p>
            The last scanned ballot was not tabulated.
          </p>
          <p>
            Remove the LIVE ballot before continuing.
          </p>
          <button
            class="sc-gsTCUz bjydpm"
            type="button"
          >
            The ballot has been removed
          </button>
        </div>
        <div
          class="sc-crrsfI TwdhN"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`calls out test ballot sheets in live mode 1`] = `
<div>
  <div
    class="sc-bBHHQT hByWxc"
  >
    <div
      class="sc-eCssSg jAJyXG"
    >
      <nav
        class="sc-jSgupP dvPmoJ"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        />
      </nav>
    </div>
    <main
      class="sc-iJKOzS kSmZZc"
    >
      <div
        class="sc-iqHYGH jKykRi"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <h1>
            <span
              style="font-size: 2em;"
            >
              Test Ballot
            </span>
          </h1>
          <p>
            The last scanned ballot was not tabulated.
          </p>
          <p>
            Remove the TEST ballot before continuing.
          </p>
          <button
            class="sc-gsTCUz bjydpm"
            type="button"
          >
            The ballot has been removed
          </button>
        </div>
        <div
          class="sc-crrsfI TwdhN"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the ballot sheet is blank if it is 1`] = `
<div>
  <div
    class="sc-bBHHQT hByWxc"
  >
    <div
      class="sc-eCssSg jAJyXG"
    >
      <nav
        class="sc-jSgupP dvPmoJ"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        />
      </nav>
    </div>
    <main
      class="sc-iJKOzS kSmZZc"
    >
      <div
        class="sc-iqHYGH jKykRi"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <h1>
            <span
              style="font-size: 2em;"
            >
              Blank Ballot
            </span>
          </h1>
          <p>
            The last scanned ballot was not tabulated because no votes were detected.
          </p>
          <p>
            <button
              class="sc-gsTCUz bjydpm"
              type="button"
            >
              Remove to Adjudicate
            </button>
          </p>
          <p>
            <button
              class="sc-gsTCUz bjydpm"
              type="button"
            >
              Tabulate As Is
            </button>
          </p>
        </div>
        <div
          class="sc-crrsfI TwdhN"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the ballot sheet is overvoted if it is 1`] = `
<div>
  <div
    class="sc-bBHHQT hByWxc"
  >
    <div
      class="sc-eCssSg jAJyXG"
    >
      <nav
        class="sc-jSgupP dvPmoJ"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        />
      </nav>
    </div>
    <main
      class="sc-iJKOzS kSmZZc"
    >
      <div
        class="sc-iqHYGH jKykRi"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <h1>
            <span
              style="font-size: 2em;"
            >
              Overvote
            </span>
          </h1>
          <p>
            The last scanned ballot was not tabulated because an overvote was detected.
          </p>
          <p>
            <button
              class="sc-gsTCUz bjydpm"
              type="button"
            >
              Remove to Adjudicate
            </button>
          </p>
          <p>
            <button
              class="sc-gsTCUz bjydpm"
              type="button"
            >
              Tabulate As Is
            </button>
          </p>
        </div>
        <div
          class="sc-crrsfI TwdhN"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the ballot sheet is undervoted if it is 1`] = `
<div>
  <div
    class="sc-bBHHQT hByWxc"
  >
    <div
      class="sc-eCssSg jAJyXG"
    >
      <nav
        class="sc-jSgupP dvPmoJ"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        />
      </nav>
    </div>
    <main
      class="sc-iJKOzS kSmZZc"
    >
      <div
        class="sc-iqHYGH jKykRi"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <h1>
            <span
              style="font-size: 2em;"
            >
              Undervote
            </span>
          </h1>
          <p>
            The last scanned ballot was not tabulated because an undervote was detected.
          </p>
          <p>
            <button
              class="sc-gsTCUz bjydpm"
              type="button"
            >
              Remove to Adjudicate
            </button>
          </p>
          <p>
            <button
              class="sc-gsTCUz bjydpm"
              type="button"
            >
              Tabulate As Is
            </button>
          </p>
        </div>
        <div
          class="sc-crrsfI TwdhN"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the sheet is unreadable if it is 1`] = `
<div>
  <div
    class="sc-bBHHQT hByWxc"
  >
    <div
      class="sc-eCssSg jAJyXG"
    >
      <nav
        class="sc-jSgupP dvPmoJ"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        />
      </nav>
    </div>
    <main
      class="sc-iJKOzS kSmZZc"
    >
      <div
        class="sc-iqHYGH jKykRi"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <h1>
            <span
              style="font-size: 2em;"
            >
              Unreadable
            </span>
          </h1>
          <p>
            The last scanned ballot was not tabulated.
          </p>
          <p>
            There was a problem reading the ballot. Remove ballot and reload in the scanner to try again.
          </p>
          <p>
            If the error persists remove ballot and create a duplicate ballot for the Resolution Board to review.
          </p>
          <button
            class="sc-gsTCUz bjydpm"
            type="button"
          >
            The ballot has been removed
          </button>
        </div>
        <div
          class="sc-crrsfI TwdhN"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;
